# mine

./: Copy_of_contact_sheet_v03.ipynb  Copy_of_faceswap_GAN_lite_demo.ipynb  DensePose.ipynb  DensePose_RCNN_Texture_Transfer.ipynb  DensePose_test_v1.ipynb  Image_Object_Detection_On_Folder.ipynb  Macbeth1.ipynb  Macbeth_learn.ipynb  Macbeth_learn_maskrcnn_v1.ipynb  MyDFL_test_v1.ipynb  affine_transforms.ipynb  contact_sheet_v01.ipynb  contact_sheet_v02.ipynb  contact_sheet_v03.ipynb  contact_sheet_v04.ipynb  fft.ipynb  inference.ipynb  mask_rcnn_demo.ipynb  mask_rcnn_test_v1.ipynb  myDFL_testv1.ipynb  numpy.ipynb  pytorch_v1.ipynb  train_coco_coreml.ipynb  vid2depth_test_v01.ipynb
ML/: stable_diffusion.ipynb
RayOne/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  RayOne.cbp  cmake_install.cmake  raymondo
RayOne/src/: RCamera.h  README  RHitable.h  RMaterial.h  RRay.h  RSphere.h  RTexture.h  RVec3.h  exrWriteTest.cpp  exrWriteTest.h  hitable_list.h  main.cpp  random.h  test.h  vec3.h
glsl/src/: 2d_matrices.frag  3d_1.frag  four.frag  hsb_in_polar.frag  main.html  noise.frag  (+5 more)
machineLearning/: rectlabel_create_pascal_tf_record.py
ml_notebooks/: DensePose_test_v1.ipynb  Image_Object_Detection_On_Folder.ipynb  Macbeth1.ipynb  Macbeth_learn.ipynb  contact_sheet_v02.ipynb  contact_sheet_v03.ipynb  contact_sheet_v05.ipynb  fft.ipynb  luminoth.ipynb  mask_rcnn_test_v1.ipynb  opencv_v1.ipynb
theNextWeek/: CMakeLists.txt
theNextWeek/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  theNextWeek
theNextWeek/common/: color.h
theNextWeek/src/: main.cc
(+6 files in other folders)
